# phsic

./: .gitignore  LICENSE  README.md  pyproject.toml
phsic/: app.py  config.py  encoder.py  kernel.py  phsic.py  utils.py
tests/: test_phsic.py
