[tool.poetry]
name = "phsic"
version = "0.1.0"
license = "BSD-3-Clause"
description = "Pointwise Hilbert–Schmidt Independence Criterion (PHSIC)"
authors = ["Sho Yokoi <yokoi@ecei.tohoku.ac.jp>"]

readme = "README.md"

repository = "https://github.com/cl-tohoku/phsic"

[tool.poetry.dependencies]
python = "^3.6"
dill = "^0.2.8"
numpy = "^1.15"
gensim = "^3.6"
sklearn = "^0.0.0"
tensorflow = "^1.7"
tensorflow-hub = "^0.1.1"
scipy = "^1.1"
statsmodels = "^0.9.0"
pandas = "^0.23.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
phsic = "phsic.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
